--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,6 @@
 			<artifactId>querydsl-sql</artifactId>
 			<version>4.1.3</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa -->
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
@@ -105,6 +104,13 @@
 			<version>2.9.9</version>
 		</dependency>
 		<!-- // dateTime -->
+		
+		<!-- tymeleaf -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <!-- // tymeleaf -->
 	</dependencies>
 
 	<build>
