--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,6 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      ddl-auto: create
 server:
   port: 29801
